--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   "dependencies": {
     "axios": "^1.7.9",
     "clsx": "^2.1.1",
+    "fireworks-js": "^2.10.8",
     "react": "^18.3.1",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18.3.1",
+    "react-fireworks": "^1.0.4",
     "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^7.0.2"
   },
